Fix mobile nav filter overflow bug

--- a/styles.css
+++ b/styles.css
@@ -181,6 +181,10 @@ footer a {
 		padding-left: 0;
 		padding-right: 0; 
 	}
+
+	#nav-filter a.active {
+		transform: none;
+	}
 }
 
 section#projects {
